--- a/package.json
+++ b/package.json
@@ -4,30 +4,60 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "main": "tsc && node ./dist/main.js",
+    "dev": "ts-node ./src/server.ts",
+    "debug": "node ./dist/server.js",
+    "build": "tsc",
+    "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "tsc && jest ./dist",
-    "dev": "tsc && node ./dist/src/server.js"
+    "production": "pm2 start server.js --name eproc-back"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcrypt": "^3.0.8",
+    "body-parser": "^1.19.0",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.11.0",
     "cookie-parser": "^1.4.4",
+    "dotenv": "^8.2.0",
+    "envalid": "^6.0.1",
     "express": "^4.17.1",
+    "form-data": "^4.0.0",
+    "intl": "^1.2.5",
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "mongoose": "^5.8.11",
+    "nodemailer": "^6.6.1",
     "pg-promise": "^10.10.1",
+    "pm2": "^4.4.0",
+    "qs": "^6.10.1",
     "ramda": "^0.27.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.1",
     "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.3.7",
     "@types/mongoose": "^5.8.11",
     "@types/node": "^12.19.0",
+    "@types/supertest": "^2.0.8",
     "@types/ramda": "github:types/npm-ramda#dist",
+    "husky": "^4.2.1",
+    "jest": "^25.1.0",
+    "node-gyp": "^6.1.0",
+    "nodemon": "^2.0.2",
+    "supertest": "^4.0.2",
+    "ts-jest": "^25.2.0",
+    "ts-node": "^8.6.2",
+    "tslint": "^6.0.0",
+    "tslint-config-airbnb": "^5.11.2",
     "typescript": "^3.7.5"
+  },
+  "engines": {
+    "node": ">=12.8.3"
   }
 }
